test/tests/compiler/6_statements_and_conditional_expressions/valid/extra_credit/unused_label.plx




pub fn main(none) i32 {
    label unused
    return 0
}
