test/tests/compiler/6_statements_and_conditional_expressions/invalid_semantics/extra_credit/undeclared_var_in_labeled_statement.plx




pub fn main(none) i32 {
    label lbl
    return a
    return 0
}
